scss/_patterns_logo-section.scss
@mixin vf-p-logo-section {
  .p-logo-section__title {
    @extend %small-caps-text;
  }

  .p-logo-section,
  .p-logo-section--dense {
    .p-logo-section__item {
      display: inline-block;
      margin: 0;
      margin-bottom: -1rem; // pull the next row of logos up
      margin-right: 3rem;
      margin-top: -1rem; // pull the previous row of logos down
    }

    .p-logo-section__logo {
      display: block;
      height: 8rem;
      width: auto;
    }

    .p-logo-section__items {
      line-height: 0; // prevent space between rows of inline logos

      // compensate for the negative margin on the logos
      padding-bottom: 1rem;
      padding-top: 1rem;
    }
  }

  .p-logo-section--dense {
    .p-logo-section__item {
      display: inline-block;
      margin: 0;
      margin-bottom: -0.5rem; // pull the next row of logos up
      margin-right: 1.5rem;
      margin-top: -0.5rem; // pull the previous row of logos down
    }

    .p-logo-section__logo {
      height: 5rem;
    }

    .p-logo-section__items {
      padding-bottom: 0.5rem;
      padding-top: 0.5rem;
    }
  }
}

